--- a/src/css/details.css
+++ b/src/css/details.css
@@ -14,8 +14,16 @@
     align-items: center;
 }
 
+.root {
+    height: 100%;
+    width: 100%;
+    position: relative;
+}
+
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+
 }
