--- a/src/css/details.css
+++ b/src/css/details.css
@@ -1,29 +1,67 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 .block {
     height: 400px;
     width: 400px;
-    background-color: bisque;
+    background-color: #f2f2f2;
     display: flex;
     /* align-items: center; */
     justify-content: space-between;
     flex-direction: column;
+    padding: 1rem;
+    cursor: pointer;
+    position: relative;
+}
+
+.blockVisited {
+    height: 400px;
+    width: 400px;
+    background-color: #f2f2f2;
+    display: flex;
+    /* align-items: center; */
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 1rem;
+    border: 0.5px solid #0e32d3;
+    cursor: pointer;
+    position: relative;
 }
 
 .dragText {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
 }
 
 .root {
-    height: 100%;
+    position: relative;
+}
+
+.containerCenter {
+    height: 85vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    position: relative;
+}
+
+.containerRight {
+    height: 85vh;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
     width: 100%;
     position: relative;
 }
 
 .container {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-
+    height: 85vh;
+    display: flex;
+    width: 100%;
+    position: relative;
 }
