--- a/src/css/details.css
+++ b/src/css/details.css
@@ -5,8 +5,8 @@
 }
 
 .block {
-    height: 400px;
-    width: 400px;
+    height: 200px;
+    width: 300px;
     background-color: #f2f2f2;
     display: flex;
     /* align-items: center; */
@@ -18,8 +18,8 @@
 }
 
 .blockVisited {
-    height: 400px;
-    width: 400px;
+    height: 200px;
+    width: 300px;
     background-color: #f2f2f2;
     display: flex;
     /* align-items: center; */
@@ -39,29 +39,31 @@
 
 .root {
     position: relative;
+    height: 80%;
+    max-width: 100%;
 }
 
 .containerCenter {
-    height: 85vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    max-width: 100%;
     position: relative;
 }
 
 .containerRight {
-    height: 85vh;
+    height: 100%;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    width: 100%;
+    min-width: 100%;
     position: relative;
 }
 
 .container {
-    height: 85vh;
+    height: 100%;
     display: flex;
-    width: 100%;
+    max-width: 100%;
     position: relative;
 }
