--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,9 +1,10 @@
 .footer {
-    margin-top: 1rem;
+    /* margin-top: 1rem; */
+    height: 10%;
     padding: 1rem;
     background-color: #a5becc;
     position: fixed;
-    bottom: 0;
+    /* bottom: 0; */
     left: 0;
     width: 100%;
     text-align: center;
