--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,6 +1,6 @@
 .navStyle {
     background-color: #a5becc;
-    height: 80px;
+    height: 10%;
     display: flex;
     align-items: center;
     justify-content: space-between;
