--- a/src/css/details.css
+++ b/src/css/details.css
@@ -12,7 +12,6 @@
     /* align-items: center; */
     justify-content: space-between;
     flex-direction: column;
-    padding: 1rem;
     cursor: pointer;
     position: relative;
 }
@@ -25,7 +24,6 @@
     /* align-items: center; */
     justify-content: space-between;
     flex-direction: column;
-    padding: 1rem;
     border: 0.5px solid #0e32d3;
     cursor: pointer;
     position: relative;
@@ -50,6 +48,7 @@
     align-items: center;
     max-width: 100%;
     position: relative;
+    background-color: gray;
 }
 
 .containerRight {
@@ -59,6 +58,7 @@
     align-items: flex-end;
     min-width: 100%;
     position: relative;
+    background-color: gray;
 }
 
 .container {
@@ -66,4 +66,5 @@
     display: flex;
     max-width: 100%;
     position: relative;
+    background-color: gray;
 }
